--- a/index.html
+++ b/index.html
@@ -51,7 +51,40 @@
         </section>
     </header>
     <main class="main">
-
+        <section class="curriculum">
+            <h3 class="curriculum-title">Standard Curriculum</h3>
+            <div class="card-p">
+                <div class="curriculum-card-b">
+                    <img src="assets/kinder.png" alt="" class="curriculum-img">
+                    <h4 class="card-title">Kinder (3-6) Years</h4>
+                    <p class="card-desc">Engaging curriculum for children aged 3-6, fostering creativity, social skills,
+                        problem-solving, and early learning through fun, hands-on activities.</p>
+                    <button class="card-btn-b">Read More</button>
+                </div>
+                <div class="curriculum-card-o">
+                    <img src="assets/elementary.png" alt="" class="curriculum-img">
+                    <h4 class="card-title">Elementary School</h4>
+                    <p class="card-desc">
+                        Elementary school builds foundational skills in reading, writing, math, science, and arts,
+                        fostering
+                        creativity, teamwork, and lifelong learning habits</p>
+                    <button class="card-btn-o">Read More</button>
+                </div>
+                <div class="curriculum-card-p">
+                    <img src="assets/middle.png" alt="" class="curriculum-img">
+                    <h4 class="card-title">Middle (10-16) Years</h4>
+                    <p class="card-desc">Middle years focus on personal growth, advanced academics, critical thinking,
+                        emotional development, friendships, extracurricular activities, and preparing for future
+                        challenges.
+                    </p>
+                    <button class="card-btn-p">Read More</button>
+                </div>
+            </div>
+            <div class="arrow-btn">
+                <bnt class="arrow"><img src="assets/left-arrow.png" alt=""></bnt>
+                <bnt class="arrow"><img src="assets/arrow-right.png" alt=""></bnt>
+            </div>
+        </section>
     </main>
     <footer class="footer">
 
