--- a/index.html
+++ b/index.html
@@ -85,9 +85,61 @@
                 <bnt class="arrow"><img src="assets/arrow-right.png" alt=""></bnt>
             </div>
         </section>
+        <section class="stories">
+            <h3 class="stories-title">
+                Our Stories
+            </h3>
+            <div class="stories-p">
+                <div class="story-a">
+                    <img src="assets/story-1.png" alt="" class="img-a">
+                    <div class="btn-a-container  ">
+                        <button class="story-btn-a">November 19, 2019</button>
+                    </div>
+                    <h3 class="story-title-a">A fun toddler coloring training on
+                        classroom</h3>
+                    <p class="story-desc-a">Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                </div>
+                <div class="story-b-p">
+                    <div class="story-b">
+                        <img src="assets/story-2.png" alt="" class="img-b">
+                        <div class="btn-b">
+                            <button class="btn-b1">November 19, 2019</button>
+                        </div>
+                        <h3 class="title-b">Find out if a school fits the
+                            family’s needs</h3>
+                    </div>
+                    <div class="story-b">
+                        <img src="assets/story-3.png" alt="" class="img-b">
+                        <div class="btn-b">
+                            <button class="btn-b2">November 19, 2019</button>
+                        </div>
+                        <h3 class="title-b">Summer math & literacy
+                            centres for kids</h3>
+                    </div>
+                    <div class="story-b">
+                        <img src="assets/story-4.png" alt="" class="img-b">
+                        <div class="btn-b">
+                            <button class="btn-b3">September 10, 2019</button>
+                        </div>
+                        <h3 class="title-b">Classroom management
+                            techniques for new tutors</h3>
+                    </div>
+                    <div class="story-b">
+                        <img src="assets/story-5.png" alt="" class="img-b">
+                        <div class="btn-b">
+                            <button class="btn-b4">July 19, 2019</button>
+                        </div>
+                        <h3 class="title-b">Conversation rhymes
+                            improve kids listening</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-
+        
     </footer>
 </body>
 
