--- a/index.html
+++ b/index.html
@@ -136,10 +136,40 @@
                     </div>
                 </div>
             </div>
+            <div class="all-storis">
+                <button class="more-btn">View All</button>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        
+        <section class="footer-p">
+            <div class="footer-s1">
+                <div class="f-img">
+                    <img src="assets/footer-logo.png" alt="">
+                    <h3 class="f-title">Kids <br> Education</h3>
+                </div>
+                <p class="footer-desc">
+                    Our kindergarten provides a nurturing environment where children explore, learn, and grow through
+                    play-based activities, fostering creativity, curiosity, and social skills.
+                </p>
+            </div>
+            <div class="footer-s2">
+                <h3 class="f-manu-title">About School</h3>
+                <ul>
+                    <li class="btn-f"><a href="">Home</a></li>
+                    <li class="btn-f"><a href="">About</a></li>
+                    <li class="btn-f"><a href="">Facilities</a></li>
+                    <li class="btn-f"><a href="">Admission</a></li>
+                </ul>
+            </div>
+            <div class="footer-s3">
+                <h3 class="social-title">Keep In Touch</h3>
+                <img src="assets/fb.png" alt="" class="social-img">
+                <img src="assets/google+.png" alt=""class="social-img">
+                <img src="assets/twitter.png" alt="" class="social-img">
+                <img src="assets/dribble.png" alt="" class="social-img">
+            </div>
+        </section>
     </footer>
 </body>
 
